--- a/docs/en/manifest.json
+++ b/docs/en/manifest.json
@@ -24,140 +24,140 @@
   },
   "readingOrder": [
     {
-      "href": "EPUB/xhtml/raw/page-1.xhtml",
+      "href": "content/xhtml/title.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/raw/sdofuv.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/copyright.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/raw/szn52y.xhtml",
+     "href": "https://fieldguides.github.io/library/en/content/frontpage.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/raw/sdqp7e.xhtml",
+      "href": "content/xhtml/introduction.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page.xhtml",
+      "href": "content/xhtml/chapter1.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page1.xhtml",
+      "href": "content/xhtml/chapter2.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page4.xhtml",
+      "href": "content/xhtml/chapter3.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page10.xhtml",
+      "href": "content/xhtml/chapter4.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page11.xhtml",
+      "href": "content/xhtml/chapter5.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page12.xhtml",
+      "href": "content/xhtml/chapter6.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page14.xhtml",
+      "href": "content/xhtml/chapter7.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page15.xhtml",
+      "href": "content/xhtml/chapter8.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page18.xhtml",
+      "href": "content/xhtml/chapter9.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page19.xhtml",
+      "href": "content/xhtml/chapter10.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page20.xhtml",
+      "href": "content/xhtml/chapter11.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page22.xhtml",
+      "href": "content/xhtml/chapter12.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page23.xhtml",
+      "href": "content/xhtml/chapter13.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page24.xhtml",
+      "href": "content/xhtml/chapter14.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/raw/sxghdh.xhtml",
+      "href": "content/xhtml/chapter15.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/raw/sx7iv6.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/backcover.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
@@ -166,27 +166,11 @@
   ],
   "resources": [
     {
-      "href": "EPUB/xhtml/raw/contents.xhtml",
-      "type": "application/xhtml+xml",
-      "rel": "contents"
-    },
-    {
-      "href": "EPUB/xhtml/raw/contents.ncx",
-      "type": "application/x-dtbncx+xml"
-    },
-    {
-      "href": "EPUB/imgs/defaultCover.png",
-      "type": "image/png",
-      "height": 324,
-      "width": 250,
-      "rel": "cover"
-    },
-    {
-      "href": "EPUB/css/base.css",
+      "href": "../resources/css/base.css",
       "type": "text/css"
     },
     {
-      "href": "EPUB/css/global.css",
+      "href": "../resources/css/global.css",
       "type": "text/css"
     },
     {
@@ -196,83 +180,83 @@
   ],
   "toc": [
     {
-      "href": "EPUB/xhtml/raw/page-1.xhtml",
+      "href": "content/xhtml/title.xhtml",
       "title": "Title"
     },
     {
-      "href": "EPUB/xhtml/raw/sdofuv.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/copyright.xhtml",
       "title": "Inside Cover"
     },
     {
-      "href": "EPUB/xhtml/raw/szn52y.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/frontpage.xhtml",
       "title": "Front Page"
     },
     {
-      "href": "EPUB/xhtml/raw/sdqp7e.xhtml",
+      "href": "content/xhtml/introduction.xhtml",
       "title": "Introduction"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page.xhtml",
+      "href": "content/xhtml/chapter1.xhtml",
       "title": "1. What are Fraudulent Medicines"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page1.xhtml",
+      "href": "content/xhtml/chapter2.xhtml",
       "title": "2. International Legal Instruments"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page4.xhtml",
+      "href": "content/xhtml/chapter3.xhtml",
       "title": "3. National Legislation"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page10.xhtml",
+      "href": "content/xhtml/chapter4.xhtml",
       "title": "4. Investigating the Smuggling of Fraudulent Medic."
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page11.xhtml",
+      "href": "content/xhtml/chapter5.xhtml",
       "title": "5. Sources of Information"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page12.xhtml",
+      "href": "content/xhtml/chapter6.xhtml",
       "title": "6. The Internet and Fraudulent Medicines."
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page14.xhtml",
+      "href": "content/xhtml/chapter7.xhtml",
       "title": "7. Sharing Intelligence"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page15.xhtml",
+      "href": "content/xhtml/chapter8.xhtml",
       "title": "8. Risk Profiling"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page18.xhtml",
+      "href": "content/xhtml/chapter9.xhtml",
       "title": "9. Identification of fraudulent medication"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page19.xhtml",
+      "href": "content/xhtml/chapter10.xhtml",
       "title": "10. The Search Kit"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page20.xhtml",
+      "href": "content/xhtml/chapter11.xhtml",
       "title": "11. Securing the evidence"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page22.xhtml",
+      "href": "content/xhtml/chapter12.xhtml",
       "title": "12. Chain of Custody"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page23.xhtml",
+      "href": "content/xhtml/chapter13.xhtml",
       "title": "13. Controlled Deliveries"
     },
     {
-      "href": "EPUB/xhtml/htmlq0l3t/page24.xhtml",
+      "href": "content/xhtml/chapter14.xhtml",
       "title": "14. Interviewing Suspects"
     },
     {
-      "href": "EPUB/xhtml/raw/sxghdh.xhtml",
+      "href": "content/xhtml/chapter15.xhtml",
       "title": "15. Financial Investigations"
     },
     {
-      "href": "EPUB/xhtml/raw/sx7iv6.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/backcover.xhtml",
       "title": "Back Cover"
     }
   ]
